Agregada configuración de Usuarios